--- Auto-Git Commit ---

--- a/static-assets/css/list_pokimon.css
+++ b/static-assets/css/list_pokimon.css
@@ -5,7 +5,7 @@ body {
     padding: 5px;
 }
 
-#pokimon_box {
+.scroll_box {
     background-color: antiquewhite;
     margin: 10px;
     padding: 10px;
