--- a/static-assets/css/main_style.css
+++ b/static-assets/css/main_style.css
@@ -5,11 +5,16 @@ body {
     padding: 5px;
 }
 
-li , ol {
+li,
+ol {
     cursor: pointer;
 }
 
-h1 , h3 , p , .text_box  {
+h1,
+h3,
+p,
+.text_box,
+#list_pok {
     background-color: antiquewhite;
     margin: 10px;
     padding: 10px;
@@ -18,12 +23,21 @@ h1 , h3 , p , .text_box  {
     font-family: cursive;
 }
 
-button{
-    color:coral;
-    border:1px solid;
+.pok_pic {
+    margin: 5px;
+}
+
+.pok_data {
+    margin: 5px;
+    align-items: flex-start;
+    text-justify: distribute;
+}
+
+button {
+    color: coral;
+    border: 1px solid;
     border-radius: 5px;
-    background-color:chocolate;
+    background-color: chocolate;
     font-size: large;
     font-family: cursive;
-    
 }
