--- a/static-assets/css/list_pokimon.css
+++ b/static-assets/css/list_pokimon.css
@@ -1,4 +1,3 @@
-
 .scroll_box {
     background-color: antiquewhite;
     margin: 10px;
@@ -11,12 +10,30 @@
     overflow: auto;
 }
 
-h1{
-    width:670px;
+h1 {
+    width: 670px;
     text-align: center;
 }
 
-.pokimon_inner_box{
+.pokimon_data {
+    background-color: crimson;
+    border: 1px solid;
+    border-radius: 5px;
+    color: yellow;
+    width: 150px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.pokimon_picture {
+    background-color: chocolate;
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.pokimon_inner_box {
     font-family: cursive;
     border: 1px solid #ccc;
     margin: 2px;
